micro-eureka-server/deploy/test/k8syamls/service.yaml
apiVersion: v1
kind: Service
metadata:
  name: micro-eureka
  labels:
    app: micro-eureka
  namespace: test8
spec:
  clusterIP: None
  ports:
  - port: 14100
    protocol: TCP
    targetPort: 14100
  selector:
    app: micro-eureka
  type: ClusterIP
