micro-eureka-server/deploy/test/k8syamls/test.yaml
apiVersion: apps/v1beta1
kind: StatefulSet
metadata:
  name: web
  namespace: test2
spec:
  serviceName: "nginx"
  replicas: 2
  template:
    metadata:
      labels:
        app: nginx
    spec:
      containers:
      - name: nginx
        image: gcr.io/google_containers/nginx-slim:0.8
        ports:
        - containerPort: 80
          name: web
